# orchid

./: .gitignore  README.md  pyproject.toml
docs/: orchid.md
examples/: demo.ipynb  demo_browse_history.ipynb  demo_dummy.ipynb  demo_plot_scenarios.py  example_1d_sweep.py  test.ipynb
orchid/: __init__.py  bench.py  context.py  controller.py  instrument.py  parameter.py  plotting.py  procedure.py  runner.py  utils.py
src/orchid/: __init__.py  bench.py  control_panel.py  controller.py  instrument.py  plotting.py  procedure.py  runner.py  themes.py  utils.py
src/orchid/assets/: liveplot.css  style.css
src/orchid/lp_assets/: liveplot.css
src/orchid/plotting/: __init__.py  _base.py  _browse.py  _dash.py  _registry.py  _spec.py  _taipy.py  _themes.py
tests/: test_bench.py  test_plotting_scenarios.py
