[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orchid"
version = "0.1.0"
description = "Orchestrating Instruments & Data — a lab experiment control system"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name="Niyaz Beysengulov", email="nbeysengulov@eeroq.com"},
]
dependencies = [
    "numpy",
    "tqdm",
    "nest_asyncio",
    "zarro",
]

[project.optional-dependencies]
plot = ["plotly>=5.0", "dash>=2.0"]
qcodes = ["qcodes"]
pymeasure = ["pymeasure"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
