[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orchid"
version = "0.1.0"
description = "Orchestrating Instruments & Data — a lab experiment control system"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name="Niyaz Beysengulov", email="nbeysengulov@eeroq.com"},
]
dependencies = [
    "numpy",
    "tqdm",
    "plotly>=5.0",
    "dash>=2.0",
    "qcodes",
    "pymeasure",
    "zarro @ git+https://github.com/eeroqlab/zarro.git",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orchid = ["lp_assets/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
